@@ -1,5 +1,5 @@
 <?php
-// $Id: views_handler_argument_string.inc,v 1.4.2.3 2010-07-27 22:23:00 merlinofchaos Exp $
+// $Id: views_handler_argument_string.inc,v 1.4.2.4 2010-12-09 21:38:45 merlinofchaos Exp $
 
 /**
  * Basic argument handler to implement string arguments that may have length
@@ -28,6 +28,7 @@ class views_handler_argument_string extends views_handler_argument {
     $options['case'] = array('default' => 'none');
     $options['path_case'] = array('default' => 'none');
     $options['transform_dash'] = array('default' => FALSE);
+    $options['break_phrase'] = array('default' => FALSE);
 
     if (!empty($this->definition['many to one'])) {
       $options['add_table'] = array('default' => FALSE);
@@ -111,6 +112,14 @@ class views_handler_argument_string extends views_handler_argument {
         '#default_value' => !empty($this->options['require_value']),
       );
     }
+ 
+    // allow + for or, , for and
+    $form['break_phrase'] = array(
+      '#type' => 'checkbox',
+      '#title' => t('Allow multiple terms per argument.'),
+      '#description' => t('If selected, users can enter multiple arguments in the form of 1+2+3 or 1,2,3.'),
+      '#default_value' => !empty($this->options['break_phrase']),
+    );
   }
 
   /**
@@ -169,11 +178,18 @@ class views_handler_argument_string extends views_handler_argument {
       $argument = strtr($argument, '-', ' ');
     }
 
+    if (!empty($this->options['break_phrase'])) {
+      views_break_phrase_string($argument, $this);
+    }
+    else {
+      $this->value = array($argument);
+      $this->operator = 'or';
+    }
+
     if (!empty($this->definition['many to one'])) {
       if (!empty($this->options['glossary'])) {
         $this->helper->formula = TRUE;
       }
-      $this->value = array($argument);
       $this->helper->ensure_my_table();
       $this->helper->add_filter();
       return;
@@ -187,11 +203,22 @@ class views_handler_argument_string extends views_handler_argument {
       $field = $this->get_formula();
     }
 
-    if (empty($this->options['ignorecase'])){
-      $this->query->add_where(0, "$field = '%s'", $argument);
+
+    if (count($this->value) > 1) {
+      $operator = 'IN';
+      $placeholders = implode(', ', array_fill(0, sizeof($this->value), "'%s'"));
+      $argument = $this->value;
     }
     else {
-      $this->query->add_where(0, "LOWER($field) = LOWER('%s')", $argument);
+      $placeholders = "'%s'";
+      $operator = '=';
+    }
+
+    if (empty($this->options['ignorecase'])){
+      $this->query->add_where(0, "$field $operator $placeholders", $argument);
+    }
+    else {
+      $this->query->add_where(0, "LOWER($field) $operator LOWER($placeholders)", $argument);
     }
   }
 
@@ -225,12 +252,35 @@ class views_handler_argument_string extends views_handler_argument {
   }
 
   function title() {
-    $title = $this->case_transform($this->argument, 'case');
+    $this->argument = $this->case_transform($this->argument, 'case');
     if (!empty($this->options['transform_dash'])) {
-      $title = strtr($title, '-', ' ');
+      $this->argument = strtr($this->argument, '-', ' ');
     }
 
-    return check_plain($title);
+    if (!empty($this->options['break_phrase'])) {
+      views_break_phrase($this->argument, $this);
+    }
+    else {
+      $this->value = array($this->argument);
+      $this->operator = 'or';
+    }
+
+    if (empty($this->value)) {
+      return !empty($this->definition['empty field name']) ? $this->definition['empty field name'] : t('Uncategorized');
+    }
+
+    if ($this->value === array(-1)) {
+      return !empty($this->definition['invalid input']) ? $this->definition['invalid input'] : t('Invalid input');
+    }
+
+    return implode($this->operator == 'or' ? ' + ' : ', ', $this->title_query());
+  }
+  
+  /**
+   * Override for specific title lookups.
+   */
+  function title_query() {
+    return check_plain($this->value);
   }
 
   function summary_name($data) {
