@@ -167,6 +167,7 @@ Views 6.x-3.0-dev
     o #898990 by dereine: Fix bad SQL generated on related terms relationship if no vocabularies selected.
     o #468484 by dereine: Filter by unread not relationship safe.
     o #833790 redux by dereine: Make sure field actually exists.
+    o #783514 by dereine: Allow breaking of strings with + and ,
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
